--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - assets/avatar2.png
     - assets/avatar3.png
     - assets/avatar4.png
+    - assets/trophy.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
