--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_database: ^11.3.4
   firebase_auth: ^5.5.1
+  flutter_chat_bubble: ^2.0.2
+  animated_text_kit: ^4.2.3
 
 
 dev_dependencies:
