--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
     - assets/avatar3.png
     - assets/avatar4.png
     - assets/trophy.png
+    - assets/wave.png
+    - assets/bot.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
