--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,6 +14,8 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
+
     }
 
     kotlinOptions {
@@ -46,6 +48,7 @@ dependencies {
 
     // Add Firebase Analytics
     implementation 'com.google.firebase:firebase-analytics'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
     // Add other Firebase dependencies as needed
     // https://firebase.google.com/docs/android/setup#available-libraries
