--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_auth: ^5.5.1
   flutter_chat_bubble: ^2.0.2
   animated_text_kit: ^4.2.3
+  shared_preferences: ^2.5.3
+  firebase_messaging: ^15.2.5
 
 
 dev_dependencies:
